--- a/components.css
+++ b/components.css
@@ -14,6 +14,15 @@ body {
   margin: 2rem;
 }
 
+.others {
+  background-color: pink;
+  margin: 2rem;
+  border-radius: 20%;
+  font-size: 1.4rem;
+  padding: 0.4rem;
+}
+
+
 
                       /* The base of every button */
 .btn {
@@ -138,6 +147,7 @@ body {
 nav ul {
   background-color: #eee;
   text-align: center;
+  margin-bottom: 2rem;
 }
 
 nav li {
